# University-Lecture-Support-Bot-Discord-

./: README.md  pyproject.toml
src/: discord_agent.py  pyproject.toml  shinshu_summary.csv
